<resources>
    <string name="app_name" translatable="false">Login app test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Back">Back</string>
    <string name="LogintoRegister">Not yet registered? SignUp Now</string>
    <string name="SignUp">Sign Up</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="RegistertoLogin">Already have an account? Login Now</string>
    <string name="Map">Map</string>
    <string name="Graph">Graph</string>
    <string name="Dashboard">Dashboard</string>
    <string name="User">Account</string>
    <string name="Logout">Logout</string>
    <string name="Welcome">Welcome to App</string>
    <string name="or">------------------- or ------------------</string>
    <string name="Hello_user">Hello, user</string>
    <string name="User_Profile">User Profile</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Language">Language</string>
    <string name="Log_Out">[Sign Out]</string>
    <string name="Humidity_dash">Humidity(%)</string>
    <string name="Temperature_dash">Temperature(°C)</string>
    <string name="AQI_pre">AQI prediction</string>
    <string name="Place">Place</string>
    <string name="Rainfall_dash">Rainfall(mm)</string>
    <string name="Wind_Speed_dash">Wind speed(km/h)</string>
    <string name="Wind_Direction">Wind direction</string>
    <string name="chart">Chart</string>
    <string name="select_asset_name">Select Asset Name</string>
    <string name="select_attribute">Select Attribute</string>
    <string name="Attribute_hint">Attribute name here</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="Show_graph">SHOW GRAPH</string>
    <string name="Choose_lang">Choose language</string>
    <string name="English">English</string>
    <string name="Vietnamese">Vietnamese</string>
    <string name="LoginFail">Login failed</string>
    <string name="LoginSuccess">Login successfully</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="Rainfall">Rainfall</string>
    <string name="Wind_Speed">Wind Speed</string>
    <string name="Brightness">Brightness(%)</string>
    <string name="Colour_Temperature">Colour Temperature(K)</string>
    <string name="On_Off">On/Off</string>
    <string name="More">More>>></string>
</resources>