<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/image"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <!--    import drawable/icon-->

    <!--    welcome textview-->
    <ImageView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:clickable="true"
        android:src="@drawable/flag_of_the_united_states" />

    <ImageView
        android:layout_width="316dp"
        android:layout_height="309dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/edit_text_custom"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:background="@color/main_color"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_home_btn"
                android:layout_width="309dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_lavender"
                android:text="@string/Login"
                android:textAllCaps="true"
                android:textSize="25dp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <Button
                android:id="@+id/signup_home_btn"
                android:layout_width="309dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_lavender"
                android:text="@string/SignUp"
                android:textAllCaps="true"
                android:textSize="25dp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>