<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/sub_color">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:background="@color/main_color">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="21dp"
                app:srcCompat="@drawable/img" />

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/User_Profile"
                android:textColor="@color/white"
                android:textSize="25dp" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/relative1"
            android:background="@drawable/custom_border"
            android:layout_marginTop="35dp"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearance"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint="@string/Username"
                android:textSize="20dp"
                android:enabled="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Username"
            android:background="@drawable/custom_border"
            android:textColorHint="@color/white"
            android:layout_marginTop="35dp"  >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint="Email"
                android:enabled="false"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstN"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Email"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:textColorHint="@color/white"
            android:background="@drawable/custom_border" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/FirstN_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint="@string/First_Name"
                android:textSize="20dp"
                android:enabled="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastN"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentLeft="false"
            android:layout_below="@id/Email"
            android:layout_toRightOf="@id/firstN"
            android:background="@drawable/custom_border"
            android:textColorHint="@color/white"
            android:layout_marginTop="35dp"  >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LastN_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:hint="@string/Last_Name"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:enabled="false"
                android:textColorHint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/firstN"
            android:layout_marginLeft="30dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="android:drawablePadding=&quot;4dp&quot;" />

        <Button
            android:id="@+id/SignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_vertical|center_horizontal"
            android:drawableLeft="@drawable/logout_3_svgrepo_com"
            android:text="@string/Sign_Out"

            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp" />


    </RelativeLayout>

</FrameLayout>